SEE MORE link as VIEW CHARTS.

--- a/resources/data-topic.html
+++ b/resources/data-topic.html
@@ -27,7 +27,7 @@
 
       <p>Here is where I tell you even more.</p>
 
-      <a class="topic-read-more" href="http://cnn.com/">SEE MORE</a>
+      <a class="topic-read-more" href="http://cnn.com/">VIEW CHARTS</a>
 
     </th>
     <th class="expander"></th>
