--- a/resources/index.html
+++ b/resources/index.html
@@ -536,7 +536,7 @@
                             </tr>
                           </table> <!-- 20px spacer -->
 
-                          <a class="topic-read-more" href="http://cnn.com/">SEE MORE</a>
+                          <a class="topic-read-more" href="http://cnn.com/">VIEW CHARTS</a>
 
                           <table class="row">
                             <tr>
