Update HTML resources dir structure for having update and invite.

--- a/resources/update.html
+++ b/resources/update.html
@@ -8,7 +8,7 @@
     <title></title>
     <!-- Link to the email's CSS, which will be inlined into the email -->
     <link rel="stylesheet" href="css/foundation.css"/>
-    <link rel="stylesheet" href="css/opencompany.css"/>
+    <link rel="stylesheet" href="css/oc-update.css"/>
     <!-- Link to web fonts -->
     <link href='http://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
