Send reset password email.

--- a/resources/invite.html
+++ b/resources/invite.html
@@ -8,7 +8,7 @@
     <title></title>
     <!-- Link to the email's CSS, which will be inlined into the email -->
     <link rel="stylesheet" href="css/foundation.css"/>
-    <link rel="stylesheet" href="css/oc-invite.css"/>
+    <link rel="stylesheet" href="css/oc-transactional.css"/>
     <!-- Link to web fonts -->
     <link href='http://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'/>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
@@ -38,7 +38,7 @@
                               <th>
                                 <table class="spacer">
                                   <tr>
-                                    <td height="25px" style="font-size:25px;line-height:25px;">&#xA0;</td>
+                                    <td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td>
                                   </tr>
                                 </table>
                               </th>
