--- a/resources/reset.html
+++ b/resources/reset.html
@@ -51,47 +51,11 @@
 
                     <table class="row">
                       <tr>
-                        <th class="small-12 large-12 first last columns">
-                          <table>
-                            <tr>
-                              <th>
-                                <center data-parsed="">
-                                  <img class="float-center logo" align="center" style="background-color: #ffffff;
-                            border: solid 1px rgba(78, 90, 107, 0.2);" height="50px" width="50px" src="https://www.apple.com/ac/structured-data/images/knowledge_graph_logo.png" alt="Apple logo"/>
-                                </center>
-                              </th>
-                            </tr>
-                          </table>
-                        </th>
-                      </tr>
-                    </table>
-
-                    <!-- spacer -->
-                    <table class="row">
-                      <tr>
-                        <th class="small-12 large-12 first last columns">
-                          <table>
-                            <tr>
-                              <th>
-                                <table class="spacer">
-                                  <tr>
-                                    <td height="35px" style="font-size:35px;line-height:35px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
-                              <th class="expander"></th>
-                            </tr>
-                          </table>
-                        </th>
-                      </tr>
-                    </table>
-
-                    <table class="row">
-                      <tr>
                         <th class="small-2 large-2 first columns">
                         </th>
                         <th class="small-8 large-8 columns">
-                          <p class="text-center">Check out the latest from Apple!</p>
+                          <p class="text-center">Hi there! Someone (hopefully you) requested a new password for
+                          your OpenCompany account.</p>
                         </th>
                         <th class="small-2 large-2 last columns">
                         </th>
@@ -108,7 +72,7 @@
                               <th>
                                 <table class="spacer">
                                   <tr>
-                                    <td height="25px" style="font-size:25px;line-height:25px;">&#xA0;</td>
+                                    <td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td>
                                   </tr>
                                 </table>
                               </th>
@@ -133,7 +97,7 @@
                                       <td>
                                         <table>
                                           <tr>
-                                            <td><a href="#">READ THE UPDATE ➞</a></td>
+                                            <td><a href="#">RESET PASSWORD ➞</a></td>
                                           </tr>
                                         </table>
                                       </td>
@@ -148,7 +112,81 @@
                       </tr>
                     </tbody>
                   </table>
+
                   
+
+                    <!-- spacer -->
+                    <table class="row">
+                      <tr>
+                        <th class="small-12 large-12 first last columns">
+                          <table>
+                            <tr>
+                              <th>
+                                <table class="spacer">
+                                  <tr>
+                                    <td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td>
+                                  </tr>
+                                </table>
+                              </th>
+                              <th class="expander"></th>
+                            </tr>
+                          </table>
+                        </th>
+                      </tr>
+                    </table>
+
+                    <table class="row">
+                      <tr>
+                        <th class="small-2 large-2 first columns">
+                        </th>
+                        <th class="small-8 large-8 columns">
+                          <p class="text-center">This reset link is good for the next 3 hours. If you didn't request
+                          a password reset, you can ignore this email.</p>
+                        </th>
+                        <th class="small-2 large-2 last columns">
+                        </th>
+                        <th class="expander"></th>
+                      </tr>
+                    </table>
+
+                    <!-- spacer -->
+                    <table class="row">
+                      <tr>
+                        <th class="small-12 large-12 first last columns">
+                          <table>
+                            <tr>
+                              <th>
+                                <table class="spacer">
+                                  <tr>
+                                    <td height="15px" style="font-size:15px;line-height:15px;">&#xA0;</td>
+                                  </tr>
+                                </table>
+                              </th>
+                              <th class="expander"></th>
+                            </tr>
+                          </table>
+                        </th>
+                      </tr>
+                    </table>
+
+                    <table class="row">
+                      <tr>
+                        <th class="small-12 large-12 first last columns">
+                          <table>
+                            <tr>
+                              <th>
+                                <center data-parsed="">
+                                  <img class="float-center logo" align="center" style="background-color: #ffffff;
+                            " height="71px" width="71px" src="https://open-company-assets.s3.amazonaws.com/open-company.png" alt="Apple logo"/>
+                                </center>
+                              </th>
+                            </tr>
+                          </table>
+                        </th>
+                      </tr>
+                    </table>
+
+
                 </td>
               </tr>
             </table>
