Shorten reset email.

--- a/resources/reset.html
+++ b/resources/reset.html
@@ -140,8 +140,7 @@
                         <th class="small-2 large-2 first columns">
                         </th>
                         <th class="small-8 large-8 columns">
-                          <p class="text-center">This reset link is good for the next 3 hours. If you didn't request
-                          a password reset, you can ignore this email.</p>
+                          <p class="text-center">If you didn't request a password reset, you can ignore this email.</p>
                         </th>
                         <th class="small-2 large-2 last columns">
                         </th>
