Update URLs. Remove growth/finance data handling and sparkline generation.

--- a/resources/update.html
+++ b/resources/update.html
@@ -599,7 +599,7 @@
                             <th class="small-1 large-2 first columns"></th>
                             <th class="small-11 large-8 columns">
                               <p class="text-center">
-                                Powered by <a href="http://opencompany.com/">OpenCompany</a>
+                                Powered by <a href="http://carrot.io/">Carrot</a>
                               </p>
                             </th>
                             <th class="small-1 large-2 last columns"></th>
