--- a/resources/update/footer.html
+++ b/resources/update/footer.html
@@ -10,7 +10,7 @@
                   <th class="small-1 large-2 first columns"></th>
                   <th class="small-11 large-8 columns">
                     <p class="text-center">
-                      Powered by <a href="http://opencompany.com/">OpenCompany</a>, a simple way to share the big picture.
+                      Powered by <a href="http://carrot.io/">Carrot</a>, company updates that tell a better story.
                     </p>
                   </th>
                   <th class="small-1 large-2 last columns"></th>
