Clean up tr spacer and remove divs that were throwing off digest formatting in mail. Cleanup some unused files.

--- a/resources/digest.html
+++ b/resources/digest.html
@@ -87,7 +87,7 @@
                                             <table>
                                                 <tr>
                                                     <th>
-                                                        <img src="https://open-company.s3.amazonaws.com/digest-header-min.png" alt="Your weekly digest" />
+                                                        <img src="https://open-company.s3.amazonaws.com/weekly-digest-header-min.png" alt="Your weekly digest" />
                                                     </th>
                                                     <th class="expander"></th>
                                                 </tr>
@@ -100,14 +100,16 @@
                                 <table class="row board">
                                     <!-- spacer -->
                                     <tr>
-                                        <th>
+                                        <th class="small-1 large-1 first columns"></th>
+                                        <th class="small-10 large-10 columns">
                                             <table class="spacer">
                                                 <tr>
-                                                    <td height="33px" style="font-size:33px;line-height:33px;">&#xA0;</td>
+                                                    <th height="33px" style="font-size:33px;line-height:33px;">&#xA0;</th>
+                                                    <th class="expander"></th>
                                                 </tr>
                                             </table>
                                         </th>
-                                        <th class="expander"></th>
+                                        <th class="small-1 large-1 last columns"></th>
                                     </tr>
                                     <!-- spacer -->
                                     <!-- board name -->
@@ -128,14 +130,16 @@
                                     <!-- board name -->
                                     <!-- spacer -->
                                     <tr>
-                                        <th>
+                                        <th class="small-1 large-1 first columns"></th>
+                                        <th class="small-10 large-10 columns">
                                             <table class="spacer">
                                                 <tr>
-                                                    <td height="27px" style="font-size:27px;line-height:27px;">&#xA0;</td>
+                                                    <th height="27px" style="font-size:27px;line-height:27px;">&#xA0;</th>
+                                                    <th class="expander"></th>
                                                 </tr>
                                             </table>
                                         </th>
-                                        <th class="expander"></th>
+                                        <th class="small-1 large-1 last columns"></th>
                                     </tr>
                                     <!-- spacer -->
                                     <!-- post link -->
@@ -154,16 +158,18 @@
                                         <th class="small-1 large-1 last columns"></th>
                                     </tr>
                                     <!-- post link -->
+                                    <!-- spacer -->
                                     <tr>
-                                        <!-- spacer -->
-                                        <th>
+                                        <th class="small-1 large-1 first columns"></th>
+                                        <th class="small-10 large-10 columns">
                                             <table class="spacer">
                                                 <tr>
-                                                    <td height="11px" style="font-size:11px;line-height:11px;">&#xA0;</td>
+                                                    <th height="11px" style="font-size:11px;line-height:11px;">&#xA0;</th>
+                                                    <th class="expander"></th>
                                                 </tr>
                                             </table>
                                         </th>
-                                        <th class="expander"></th>
+                                        <th class="small-1 large-1 last columns"></th>
                                     </tr>
                                     <!-- spacer -->
                                     <tr>
@@ -182,20 +188,22 @@
                                         <th class="small-1 large-1 last columns"></th>
                                     </tr>
                                     <!-- post attribution -->
+                                    <!-- spacer -->
                                     <tr>
-                                        <!-- spacer -->
-                                        <th>
+                                        <th class="small-1 large-1 first columns"></th>
+                                        <th class="small-10 large-10 columns">
                                             <table class="spacer">
                                                 <tr>
-                                                    <td height="27px" style="font-size:27px;line-height:27px;">&#xA0;</td>
+                                                    <th height="27px" style="font-size:27px;line-height:27px;">&#xA0;</th>
+                                                    <th class="expander"></th>
                                                 </tr>
                                             </table>
                                         </th>
-                                        <th class="expander"></th>
+                                        <th class="small-1 large-1 last columns"></th>
                                     </tr>
                                     <!-- spacer -->
+                                    <!-- post link -->
                                     <tr>
-                                        <!-- post link -->
                                         <th class="small-1 large-1 first columns"></th>
                                         <th class="small-10 large-10 columns">
                                             <table>
