--- a/resources/digest/tr-spacer.html
+++ b/resources/digest/tr-spacer.html
@@ -1,12 +1,12 @@
-<table>
-    <tr>
-        <th>
-            <table class="spacer">
-                <tr>
-                    <td height="33px" style="font-size:33px;line-height:33px;">&#xA0;</td>
-                </tr>
-            </table>
-        </th>
-        <th class="expander"></th>
-    </tr>
-</table>
+<tr>
+    <th class="small-1 large-1 first columns"></th>
+    <th class="small-10 large-10 columns">
+        <table class="spacer">
+            <tr>
+                <th height="33px" style="font-size:33px;line-height:33px;">&#xA0;</th>
+                <th class="expander"></th>
+            </tr>
+        </table>
+    </th>
+    <th class="small-1 large-1 last columns"></th>
+</tr>
