Use oc.lib text fn for comment attribution.

--- a/resources/digest.html
+++ b/resources/digest.html
@@ -218,8 +218,8 @@
                                         <th class="small-1 large-1 last columns"></th>
                                     </tr>
                                     <!-- post link -->
+                                    <!-- spacer -->
                                     <tr>
-                                        <!-- spacer -->
                                         <th>
                                             <table class="spacer">
                                                 <tr>
@@ -230,8 +230,8 @@
                                         <th class="expander"></th>
                                     </tr>
                                     <!-- spacer -->
+                                    <!-- post attribution -->
                                     <tr>
-                                        <!-- post attribution -->
                                         <th class="small-1 large-1 first columns"></th>
                                         <th class="small-10 large-10 columns">
                                             <table>
@@ -246,8 +246,36 @@
                                         <th class="small-1 large-1 last columns"></th>
                                     </tr>
                                     <!-- post attribution -->
+                                    <!-- spacer -->
                                     <tr>
-                                        <!-- spacer -->
+                                        <th>
+                                            <table class="spacer">
+                                                <tr>
+                                                    <td height="3px" style="font-size:3px;line-height:3px;">&#xA0;</td>
+                                                </tr>
+                                            </table>
+                                        </th>
+                                        <th class="expander"></th>
+                                    </tr>
+                                    <!-- spacer -->
+                                    <!-- comment attribution -->
+                                    <tr>
+                                        <th class="small-1 large-1 first columns"></th>
+                                        <th class="small-10 large-10 columns">
+                                            <table>
+                                                <tr>
+                                                    <th>
+                                                        <p class="attribution">5 comments by Tyler Biggs, Lee Harmony and others</p>
+                                                    </th>
+                                                    <th class="expander"></th>
+                                                </tr>
+                                            </table>
+                                        </th>
+                                        <th class="small-1 large-1 last columns"></th>
+                                    </tr>
+                                    <!-- comment attribution -->
+                                    <!-- spacer -->
+                                    <tr>
                                         <th>
                                             <table class="spacer">
                                                 <tr>
