WIP, new digest email header.

--- a/resources/digest.html
+++ b/resources/digest.html
@@ -24,7 +24,7 @@
                             <td>
                                 <!-- The content of your email goes here. -->
                                 <!-- spacer -->
-                                <table class="row">
+                                <table class="row header">
                                     <tr>
                                         <th class="small-12 large-12 first last columns">
                                             <table>
@@ -44,7 +44,7 @@
                                 </table>
                                 <!-- spacer -->
                                 <!-- company logo -->
-                                <table class="row logo">
+                                <table class="row logo header">
                                     <tr>
                                         <th class="small-12 large-12 first last columns">
                                             <table>
@@ -61,7 +61,7 @@
                                 </table>
                                 <!-- company logo -->
                                 <!-- spacer -->
-                                <table class="row">
+                                <table class="row header">
                                     <tr>
                                         <th class="small-12 large-12 first last columns">
                                             <table>
@@ -80,14 +80,35 @@
                                     </tr>
                                 </table>
                                 <!-- spacer -->
-                                <!-- banner image -->
-                                <table class="row banner">
+                                <!-- digest title -->
+                                <table class="row header">
                                     <tr>
                                         <th class="small-12 large-12 first last columns">
                                             <table>
                                                 <tr>
                                                     <th>
-                                                        <img src="https://open-company.s3.amazonaws.com/weekly-digest-header-min.png" alt="Your weekly digest" />
+                                                        <center>
+                                                            <h1>Weekly Digest</h1>
+                                                        </center>
+                                                    </th>
+                                                </tr>
+                                            </table>
+                                        </th>
+                                    </tr>
+                                </table>
+                                <!-- digest title -->                                
+                                <!-- spacer -->
+                                <table class="row header">
+                                    <tr>
+                                        <th class="small-12 large-12 first last columns">
+                                            <table>
+                                                <tr>
+                                                    <th>
+                                                        <table class="spacer">
+                                                            <tr>
+                                                                <td height="50px" style="font-size:50px;line-height:50px;">&#xA0;</td>
+                                                            </tr>
+                                                        </table>
                                                     </th>
                                                     <th class="expander"></th>
                                                 </tr>
@@ -95,9 +116,9 @@
                                         </th>
                                     </tr>
                                 </table>
-                                <!-- banner image -->
+                                <!-- spacer -->
                                 <!-- board -->
-                                <table class="row board">
+                                <table class="row board first">
                                     <!-- spacer -->
                                     <tr>
                                         <th class="small-1 large-1 first columns"></th>
@@ -288,7 +309,7 @@
                                     <!-- spacer -->
                                 </table>
                                 <!-- board -->
-                                <table class="row board">
+                                <table class="row board last">
                                     <tr>
                                         <!-- spacer -->
                                         <th>
