WIP: transactional emails

--- a/resources/invite.html
+++ b/resources/invite.html
@@ -9,9 +9,6 @@
     <!-- Link to the email's CSS, which will be inlined into the email -->
     <link rel="stylesheet" href="css/foundation.css"/>
     <link rel="stylesheet" href="css/oc-transactional.css"/>
-    <!-- Link to web fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'/>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
   </head>
 
   <body>
@@ -51,7 +48,7 @@
                     <!-- spacer -->
 
                     <!-- company logo -->
-                    <table class="row logo header">
+                    <table class="row logo">
                         <tr>
                             <th class="small-12 large-12 first last columns">
                                 <table>
@@ -128,7 +125,8 @@
                     <!-- spacer -->
                     <table class="row">
                       <tr>
-                        <th class="small-12 large-12 first last columns">
+                        <th class="small-1 large-2 first columns"></th>
+                        <th class="small-10 large-8 columns">
                           <table>
                             <tr>
                               <th>
@@ -142,6 +140,8 @@
                             </tr>
                           </table>
                         </th>
+                        <th class="small-1 large-2 last columns"></th>
+                        <th class="expander"></th>
                       </tr>
                     </table>
                     <!-- spacer -->
@@ -149,9 +149,9 @@
                     <!-- org name -->
                     <table class="row body-block">
                       <tr>
-                        <th class="small-2 large-2 columns first"></th>
-                        <th class="small-8 large-8 columns"><h2 class="text-center">Apple</h2></th>
-                        <th class="small-2 large-2 columns last"></th>
+                        <th class="small-1 large-2 columns first"></th>
+                        <th class="small-10 large-8 columns"><h2 class="text-center">Apple</h2></th>
+                        <th class="small-1 large-2 columns last"></th>
                       </tr>
                     </table>
                     <!-- org name -->
